5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3812/executions/1582_1333.log
== SUBMITION (2019-03-23 15:11:41) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10


print(expressao)
-- EXECUTION TIME:
0.127291
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 15:11:53) 
-- CODE:
expressao = 30 - 3 ** 2 + 8 // 3 ** 2 * 10


print(expressao)
-- EXECUTION TIME:
0.117055
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
